# dio-employee-assistant

./: .env  .gitattributes  .gitignore  Dockerfile  commons.py  db.sqlite3  docker-compose.yml  extractor.py  loader.py  main.py  pyproject.toml  requirements.txt  test.py
.docker/data/: dump.rdb
.gigaide/: gigaide.properties
chroma/: chroma.sqlite3
documents/: КП_Документооборот.txt  Комерческое_предложение_НГХК_УАТ.txt  Коммерческое_предложение_для_ООО_Горстрой.txt  Памятка_новичку.txt  Приложение_1_Форма_2_и_3_Технико_коммерческое_предложение.txt  Справочная_информация_из_документов.txt  Справочная_информация_из_таблиц.txt  Тикеты_текстовая_интрукция.txt  УП_инструкции.txt  УФФ_текстовая_интрукция.txt  Форма_1_предложение.txt
documents_library/1С/: 1С CRM.txt
documents_library/ДИО-Консалт/: Реквизиты.txt
documents_library/Инструкции/: Инструкции_из_документов.txt  Регламент_РЗ_03.txt  (+2 more)
letters/: 8fe3d924-2458-4eda-bf95-90e72c781411.eml
migration/: env.py
notebooks/: load_doc.ipynb  load_excel.ipynb  load_powerpoint.ipynb  preprocessing.ipynb  rag_exemple.ipynb
prompts/: critic_prompt.txt  decision_prompt.txt  judge_prompt.txt  rewriter_prompt.txt  Агент_ответчик.txt  Агент_ризонер.txt  ДИО_Консалт_сотрудник.txt  Критик.txt  Первый_шаг.txt  Перефразирование_запроса.txt  Промпт_ДИО_сотрудник.txt  Промпт_ДИО_сотрудник_System.txt  Промпт_ДИО_сотрудник_с_историей_сообщений.txt  Финализатор.txt
scripts/: add_documents_elastic.py  add_embeddings_chroma.py  add_library_chroma.py  add_library_elastic.py  create_sqlite_db.py  read_mail.py  retrieve_docs_chroma.py  retrieve_docs_elastic.py
src/: config.py  container.py
(+259 files in other folders)
