[tool.poetry]
name = "diorag"
version = "0.1.0"
description = ""
authors = ["AndreyKosov <andrey.kosov.05@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.115.11"}
dishka = "^1.4.2"
pandas = "^2.2.3"
langchain = "^0.3.20"
langchain-core = "^0.3.41"
langchain-chroma = "^0.2.2"
langchain-community = "^0.3.19"
sentence-transformers = "^3.4.1"
langchain-gigachat = "^0.3.4"
aiogram = "^3.18.0"
alembic = "^1.15.1"
aiosqlite = "^0.21.0"
langchain-elasticsearch = "^0.3.2"
redis = "^5.2.1"
markdown = "^3.7"
langgraph = "^0.3.11"
duckduckgo-search = "^7.5.2"
bs4 = "^0.0.2"
unstructured = "^0.17.0"
libmagic = "^1.0"
yandexcloud = "^0.337.0"
langchain-huggingface = "^0.1.2"
pypdf2 = "^3.0.1"
pdfplumber = "^0.11.6"
pdf2image = "^1.17.0"
pillow = "^11.1.0"
langgraph-checkpoint = "^2.1.0"
docx2md = "^1.0.3"
pymupdf4llm = "^0.0.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
